--- a/yourjournal.html
+++ b/yourjournal.html
@@ -11,7 +11,7 @@
    <header> 
      <nav>
         <ul>
-            <li><h1><a href="yourjournal.html"> YOURJOURNAL</a></h1></li>
+            <li><h1><a href="yourjournal.html"> YOURJOURNALS</a></h1></li>
             <li><a href="bujo.html"> BULLETJOURNAL</a></li>
             <li><a href="sticker.html"> STICKER </a></li>
             <li><a href="washitape.html"> WASHITAPE</a></li>
